[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragcheck"
version = "0.2.0"
description = "Lightweight, reference-free RAG evaluation. No ground truth needed."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["rag", "llm", "evaluation", "nlp"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/AarushSharmaa/ragcheck"
Repository = "https://github.com/AarushSharmaa/ragcheck"
Issues = "https://github.com/AarushSharmaa/ragcheck/issues"
