[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragcheck"
version = "1.0.0"
description = "Lightweight RAG evaluation with failure mode labels, cost tracking, caching, and SQLite history. No ground truth needed."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["rag", "llm", "evaluation", "nlp"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/AarushSharmaa/ragcheck"
Repository = "https://github.com/AarushSharmaa/ragcheck"
Issues = "https://github.com/AarushSharmaa/ragcheck/issues"
